test/e2e/testdata/ratelimit-query-parameters.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ratelimit-query-parameters
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 8080
      protocol: HTTP
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit-query-parameters
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: query-parameters-ratelimit
  rateLimit:
    type: Global
    global:
      rules:
        - clientSelectors:
            - queryParams:
                - name: user
                  type: Exact
                  value: alice
          limit:
            requests: 3
            unit: Hour
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: query-parameters-ratelimit
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: ratelimit-query-parameters
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /get
      backendRefs:
        - name: infra-backend-v1
          port: 8080
